samples/_failures_safe/1761726211_21fc45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef0d19ee.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_ef0d19ee.c:158:33: error: missing terminating " character
  158 |         "NUMBER", "IDENTIFIER", "OPERATOR
      |                                 ^~~~~~~~~
./samples/SAFE/__tmp_ef0d19ee.c:158:9: error: expected expression at end of input
  158 |         "NUMBER", "IDENTIFIER", "OPERATOR
      |         ^~~~~~~~
./samples/SAFE/__tmp_ef0d19ee.c:158:9: error: expected declaration or statement at end of input
